--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="d-flex col-4 flex-column flex-shrink-0 p-3 text-white bg-dark"
             style="width: 15%; height: 100; min-height: 100vh;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                 <svg class="bi me-2" width="40" height="32">
                     <use xlink:href="#bootstrap"></use>
                 </svg>
@@ -30,7 +30,7 @@
 
 
 
-        <div class="col-8" style="width: 80%; padding: 0%;">
+        <div class="col-8" style=" width: 85%; padding: 0%;">
             <router-outlet></router-outlet>
         </div>
     </div>
