--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -11,10 +11,7 @@
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="15" alt="MDB Logo"
-                    loading="lazy" />
-            </a>
+
             <!-- Left links -->
 
             <!-- Left links -->
@@ -24,15 +21,13 @@
         <!-- Right elements -->
         <div class="d-flex align-items-center">
             <!-- Icon -->
-            <a class="link-secondary me-3" href="#">
-                <i class="fas fa-shopping-cart"></i>
-            </a>
+
 
 
             <!-- Avatar -->
             <div class="dropdown">
-                <a href="#" id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="25"
+                <a id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
+                    <img src="{{profilImage}}" class="rounded-circle" height="45"
                         alt="Black and White Portrait of a Man" loading="lazy" />
                 </a>
 
