--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -93,7 +93,8 @@
 
             </td>
             <td>
-                <p class="fw-normal mb-1">{{order.orderStatus}}</p>
+                <p class="fw-normal mb-1" [ngClass]="{'text-danger': order.orderStatus === 'Cancelled'}">
+                    {{order.orderStatus}}</p>
 
             </td>
             <td>
