--- a/src/app/warehouse-list/warehouse-list.component.html
+++ b/src/app/warehouse-list/warehouse-list.component.html
@@ -41,10 +41,10 @@
     <div class="container-fluid">
         <a class="navbar-brand">Warehouse</a>
         <form class="d-flex" role="search">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+            <input type="search" class="form-control rounded" placeholder="Search By location" aria-label="Search"
                 aria-describedby="search-addon" #searchText />
-            <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init
-                (click)="search()">search</button>
+            <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init (click)="search()">search
+            </button>
 
             <button type="button" class="btn btn-primary" style="margin-left: 35px; width: 180px;"
                 (click)="newWarehouse()">Create New</button>
