--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -22,14 +22,15 @@
             <!-- Avatar -->
             <div class="dropdown">
                 <a id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
-                    <img src="{{profilImage}}" class="rounded-circle" height="45px"
-                        alt="Black and White Portrait of a Man" loading="lazy" />
+                    <img src="{{profilImage}}" class="rounded-circle" height="45"
+                        alt="Black and White Portrait of a Man" loading="lazy" (click)="navigateToProfile()" />
                 </a>
-
             </div>
+
         </div>
-        <!-- Right elements -->
     </div>
+    <!-- Right elements -->
+
     <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
