--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,14 @@
                 </svg>
                 <span class="fs-4">Store System</span>
             </a>
+            <li class="nav-item">
+                <a routerLink="/home/Dashboard" routerLinkActive="active-link" class="nav-link" aria-current="page">
+                    <svg class="bi me-2" width="16" height="16">
+
+                    </svg>
+                    Dashboard
+                </a>
+            </li>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item" *ngFor="let menuItem of filteredMenu">
