--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -28,7 +28,7 @@
             <div class="dropdown">
                 <a id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
                     <img src="{{profilImage}}" class="rounded-circle" height="45"
-                        alt="Black and White Portrait of a Man" loading="lazy" />
+                        alt="Black and White Portrait of a Man" loading="lazy" (click)="navigateToProfile()" />
                 </a>
 
             </div>
@@ -39,7 +39,7 @@
 </nav>
 <!-- Navbar -->
 
-<div style="margin-left: 40px; margin-top: 30px;">
+<div>
     <h3>Order management</h3>
 </div>
 
@@ -47,6 +47,28 @@
 <nav class="navbar bg-body-tertiary mx-auto" style="margin-top: 50px; width: 90%;">
     <div class="container-fluid">
         <a class="navbar-brand">Order</a>
+
+        <div class="form-group col-md-4" style="width: 180px;">
+            <label for="order-state" class="text-muted mb-2">Order State</label>
+            <select id="order-state" class="form-control bg-light" [(ngModel)]="selectedOrderState"
+                (ngModelChange)="searchByStatus()">
+                <option value="" selected>none</option>
+                <option value="Pending">Pending</option>
+                <option value="Delivered">Delivered</option>
+                <option value="Cancelled">Cancelled</option>
+            </select>
+        </div>
+
+        <div class="form-group col-md-4" style="width: 180px;">
+            <label for="order-state" class="text-muted mb-2">Pyment Method</label>
+            <select id="order-state" class="form-control bg-light" [(ngModel)]="selectedpymentMethod"
+                (ngModelChange)="searchByPymentMethod()">
+                <option value="" selected>none</option>
+                <option value="Cash">Cash</option>
+                <option value="Credit-Card">Credit Card</option>
+                <option value="Paypal">PayPal</option>
+            </select>
+        </div>
         <form class="d-flex" role="search">
             <input type="search" class="form-control rounded" placeholder="Sreach By location" aria-label="Search"
                 aria-describedby="search-addon" #searchText />
