--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,70 +1,73 @@
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="height: 80px;">
-    <!-- Container wrapper -->
     <div class="container-fluid">
-        <!-- Toggle button -->
         <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
-
-        <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar brand -->
-
-            <!-- Left links -->
-
-            <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
-
-        <!-- Right elements -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
         <div class="d-flex align-items-center">
-            <!-- Icon -->
-
-
-
-            <!-- Avatar -->
             <div class="dropdown">
                 <a id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
                     <img src="{{profilImage}}" class="rounded-circle" height="45"
-                        alt="Black and White Portrait of a Man" loading="lazy" />
+                        alt="Black and White Portrait of a Man" loading="lazy" (click)="navigateToProfile()" />
                 </a>
-
             </div>
         </div>
-        <!-- Right elements -->
     </div>
-    <!-- Container wrapper -->
 </nav>
-<!-- Navbar -->
 
+<!-- Price Range Section -->
 <div style="margin-left: 40px; margin-top: 30px;">
-    <h3>Products management</h3>
+    <h3>Products Management</h3>
 </div>
-
 
 <nav class="navbar bg-body-tertiary mx-auto" style="margin-top: 50px; width: 90%;">
     <div class="container-fluid">
         <a class="navbar-brand">Products</a>
+
+        <!-- <button  class="btn btn-secondary">Open Price Range</button> -->
+
+        <div
+            style="border: 1px solid lightgray; display: flex; justify-content: center; align-items: center; border-radius: 10px; padding: 10px;">
+            <div class="form-group col-md-4" style="width: 150px;">
+                <!-- Min Price Slider -->
+                <label for="minPrice" class="slider-label">Min Price: ${{ minPrice }}</label>
+                <input type="range" id="minPrice" min="0" max="1000" [(ngModel)]="minPrice" class="slider" step="10">
+
+                <!-- Max Price Slider -->
+                <label for="maxPrice" class="slider-label">Max Price: ${{ maxPrice }}</label>
+                <input type="range" id="maxPrice" min="0" max="1000" [(ngModel)]="maxPrice" class="slider" step="10">
+            </div>
+
+            <div class="form-group col-md-4" style="width: 100px; margin-left: 20px;">
+                <button (click)="seachByPriceAvarge()" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+
+
+
+        <!-- Order By Dropdown -->
+        <div class="form-group col-md-4" style="width: 150px;">
+            <select id="orderBy" class="form-control" (change)="onOrderByChange($event)">
+                <option selected disabled>Order By...</option>
+                <option value="ascending">Ascending</option>
+                <option value="descending">Descending</option>
+            </select>
+        </div>
+
+        <!-- Search Form -->
         <form class="d-flex" role="search">
-            <input type="search" class="form-control rounded" placeholder="Search By name" aria-label="Search"
+            <input type="search" class="form-control rounded" placeholder="Search By Name" aria-label="Search"
                 aria-describedby="search-addon" #searchText />
             <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init
-                (click)="search()">search</button>
-
-            <button type="button" class="btn btn-primary " style="margin-left: 35px; width: 160px;"
-                (click)="newProduct()">add
-                New</button>
+                (click)="search()">Search</button>
+            <button type="button" class="btn btn-primary" style="margin-left: 35px; width: 160px;"
+                (click)="newProduct()">Add New</button>
         </form>
     </div>
-
-
-
 </nav>
 
-
-
+<!-- Product Table -->
 <table class="table align-middle mt-3 bg-white mx-auto" style="width: 90%; table-layout: fixed;">
     <thead class="bg-light">
         <tr>
@@ -80,50 +83,40 @@
         <tr *ngFor="let product of products">
             <td>
                 <div class="d-flex align-items-center">
-                    <img src="{{product.image ==''?'../../assets/noImage.jpg':product.image}}" alt=""
+                    <img src="{{ product.image == '' ? '../../assets/noImage.jpg' : product.image }}" alt=""
                         style="width: 80px; height: 80px;" class="rounded" />
                     <div class="ms-3">
-                        <p class="fw-bold mb-1">{{product.name}}</p>
+                        <p class="fw-bold mb-1">{{ product.name }}</p>
                     </div>
                 </div>
             </td>
             <td>
-                <p class="fw-normal mb-1 truncated">{{product.description}}</p>
+                <p class="fw-normal mb-1 truncated">{{ product.description }}</p>
             </td>
             <td>
-                <p class="fw-normal mb-1">{{product.sku}}</p>
+                <p class="fw-normal mb-1">{{ product.sku }}</p>
             </td>
             <td>
-                <p class="fw-normal mb-1">{{product.stock}}</p>
-
+                <p class="fw-normal mb-1">{{ product.stock }}</p>
                 <span *ngIf="product.stock <= 0" class="badge bg-danger">Out of Stock</span>
             </td>
             <td>
-                <p class="fw-normal mb-1">{{product.price}}jd</p>
+                <p class="fw-normal mb-1">{{ product.price }} jd</p>
             </td>
             <td>
-
                 <div class="btn-group">
-                    <button type="button" class="btn " data-bs-toggle="dropdown" aria-haspopup="true"
+                    <button type="button" class="btn" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </button>
-
                     <div class="dropdown-menu">
-
-                        <a class="dropdown-item">
-                            <i class="fas fa-edit" (click)="edit(product.productId)"></i> Edit
-                        </a>
-
+                        <a class="dropdown-item"><i class="fas fa-edit" (click)="edit(product.productId)"></i> Edit</a>
                         <a class="dropdown-item" (click)="deleteProduct(product.productId)">
                             <i class="fa-solid fa-trash" style="color: #ff0000;"></i> Delete
                         </a>
                     </div>
-
                 </div>
-
             </td>
         </tr>
     </tbody>
-
 </table>
